--- a/package.json
+++ b/package.json
@@ -32,13 +32,15 @@
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "express-session": "^1.18.1",
+    "express-session": "^1.19.0",
     "express-useragent": "^1.0.15",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "multer": "^1.4.5-lts.2",
     "nodemailer": "^6.10.1",
     "otplib": "^12.0.1",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "pg": "^8.14.1",
     "pgsql-ast-parser": "^12.0.1",
     "qrcode": "^1.5.4",
